--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -12,8 +12,10 @@ pillow==11.3.0
 psycopg2==2.9.10
 py-moneyed==3.0
 PyJWT==1.7.1
+python-dotenv==1.1.1
 reportlab==4.4.2
 setuptools==78.1.0
 sqlparse==0.5.3
 typing_extensions==4.13.0
 tzdata==2025.2
+whitenoise==6.9.0
