--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,6 +1,8 @@
 asgiref==3.8.1
 babel==2.17.0
+cffi==2.0.0
 charset-normalizer==3.4.2
+cryptography==46.0.2
 Django==5.1.7
 django-cors-headers==4.7.0
 django-filter==25.1
@@ -8,14 +10,17 @@ django-money==3.5.3
 djangorestframework==3.16.0
 djangorestframework-jwt==1.11.0
 djangorestframework_simplejwt==5.5.0
+mysqlclient==2.2.7
 pillow==11.3.0
-psycopg2==2.9.10
 py-moneyed==3.0
+pycparser==2.23
 PyJWT==1.7.1
+PyMySQL==1.1.2
 python-dotenv==1.1.1
 reportlab==4.4.2
-setuptools==78.1.0
+setuptools==80.9.0
 sqlparse==0.5.3
 typing_extensions==4.13.0
 tzdata==2025.2
+wheel==0.45.1
 whitenoise==6.9.0
