--- a/frontend-v5/package.json
+++ b/frontend-v5/package.json
@@ -32,13 +32,16 @@
     "date-fns": "^4.1.0",
     "jspdf": "^3.0.1",
     "jspdf-autotable": "^5.0.2",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.536.0",
     "next": "^15.4.5",
     "react": "^19.1.0",
     "react-day-picker": "^9.8.1",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.62.0",
+    "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.7.1",
+    "recharts": "^3.7.0",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "tailwind-variants": "^2.1.0",
@@ -48,6 +51,7 @@
   "devDependencies": {
     "@eslint/js": "^9.30.1",
     "@types/axios": "^0.9.36",
+    "@types/leaflet": "^1.9.21",
     "@types/node": "^24.1.0",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
